@@ -6,29 +6,34 @@ import software.amazon.awscdk.core.Stack;
 import software.amazon.awscdk.core.StackProps;
 
 import java.util.Collections;
-import java.util.Map;
 
+/**
+ * This stack creates a {@link Network} and a {@link Service} that deploys a given Docker image. The {@link Service} is
+ * pre-configured for a Spring Boot application.
+ *
+ * This construct is for demonstration purposes since it's not configurable and thus of little practical use.
+ */
 public class SpringBootApplication extends Stack {
 
     public SpringBootApplication(
             final Construct scope,
             final String id,
-            final Environment awsEnvironment,
-            final String sslCertificateArn,
+            final Environment environment,
             final String dockerImageUrl) {
         super(scope, id, StackProps.builder()
                 .stackName("SpringBootApplication")
-                .env(awsEnvironment).build());
+                .env(environment)
+                .build());
 
-        Network network = new Network(this, "network", awsEnvironment, "prod", new Network.NetworkProperties(sslCertificateArn));
-        Service service = new Service(this, "Service", awsEnvironment, new ApplicationEnvironment("SpringBootApplication", "prod"), new Service.ServiceProperties(
-                new Service.DockerImageSource(dockerImageUrl),
-                Collections.emptyList(),
-                Map.of(
-                        "AWS_REGION", awsEnvironment.getRegion(),
-                        "SPRING_PROFILES_ACTIVE", "prod"
-                )
-        ));
+
+        Network network = new Network(this, "network", environment, "prod", new Network.NetworkInputParameters());
+        Service service = new Service(this, "Service", environment, new ApplicationEnvironment("SpringBootApplication", "prod"),
+                new Service.ServiceInputParameters(
+                        new Service.DockerImageSource(dockerImageUrl),
+                        Collections.emptyList(),
+                        Collections.emptyMap()),
+                network.getOutputParameters());
 
     }
+
 }
